--- a/Google2/google.css
+++ b/Google2/google.css
@@ -77,8 +77,25 @@ header .right p.user{
     cursor: pointer;
 }
 .main .button{
-    display: flex;
-    padding-top: 15px;
+    margin-top: 40px;
 }
-
+.main .button button{
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    margin-right: 10px;
+    outline: none;
+    cursor: pointer;
+}
+.main .button button:hover{
+    -webkit-box-shadow: 0px 0px 32px -9px rgba(0,0,0,1);
+    -moz-box-shadow: 0px 0px 32px -9px rgba(0,0,0,1);
+    box-shadow: 0px 0px 32px -9px rgba(0,0,0,1);
+}
+.visite{
+    padding-top: 20px;
+}
+.anglais{
+    padding-top: 35px;
+}
 /* Fin de la partie principale */
