--- a/Google2/google.css
+++ b/Google2/google.css
@@ -16,12 +16,16 @@ header .left{
   display:flex;
   flex-wrap:wrap;
 }
-header p{
-  margin-right: 10px;
-  color: #787878;
-  cursor:pointer;
+header a{
+  margin-top : 10px;
+  margin-right: 5px;
+  padding: 5px;
 }
-header p:hover{
+header i{
+  font-size: 30px;
+  margin-top: -10px;
+}
+header a:hover{
   color: #000;
 }
 header .right{
@@ -35,11 +39,6 @@ header .right svg{
   margin-right: 10px;
   cursor:pointer;
 }
-header .right p.user{
-  font-size: 30px;
-  margin-top: 10px;
-  color: #595959;
-}
 /* Fin de la partie header */
 
 /* Partie principale */
@@ -48,23 +47,29 @@ header .right p.user{
     display: flex;
     flex-direction: column;    
     align-items: center;
-    margin-top: 100px;
+    margin-top: 200px;
 }
 .main .group{
     display: flex;
     flex-direction: column;
+    height: 30px;
     width: 40%;
+    border: 1px solid #000;
+    border-radius: 25px;
 }
 .main .group input{
-    margin-top: 20px;
-    padding: 15px;
+    margin-left: 45px;
     border-radius: 40px;
+    height: 30px;
     border: 1px solid #d1d1d1;
     outline: none;
     width: 100%;
+    background: transparent;
+    border: none;
+    z-index: 2;
 }
 /*https://www.cssmatic.com/box-shadow*/
-.main .group input:hover,.main .group input:focus{
+.main .group:hover,.main .group:focus{
     -webkit-box-shadow: 0px 0px 15px 8px rgba(194,184,194,1);
     -moz-box-shadow: 0px 0px 15px 8px rgba(194,184,194,1);
     box-shadow: 0px 0px 15px 8px rgba(194,184,194,1);
@@ -72,9 +77,18 @@ header .right p.user{
 .main .group label i{
     float: right;
     font-size: 20px;
-    margin-top: -33px;
-    margin-right: -15px;
+    margin-top: -25px;
+    margin-right: 10px;
     cursor: pointer;
+    z-index: 3;
+}
+.main .group img{
+    float: left;
+    height: 30px;
+    width: 5%;
+    margin-top: -30px;
+    margin-left: 10px;
+    z-index: 1;
 }
 .main .button{
     margin-top: 40px;
@@ -93,9 +107,64 @@ header .right p.user{
     box-shadow: 0px 0px 32px -9px rgba(0,0,0,1);
 }
 .visite{
-    padding-top: 20px;
+    padding-top: 30px;
 }
 .anglais{
     padding-top: 35px;
 }
 /* Fin de la partie principale */
+
+/* Début bas de page*/
+
+footer{
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:space-between;
+  background: #f2f2f2;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+footer .basgauche{
+  display:flex;
+  flex-wrap:wrap;
+}
+
+footer .basgauche a{
+  justify-items: center;
+  font-size: small;
+  margin: 15px;
+  color: #70757a;
+  text-decoration: none;
+  cursor: pointer;
+}
+footer .basgauche a:hover, footer .basdroite a:hover, footer .bascentre a:hover{
+  text-decoration: underline;
+}
+footer .bascentre{
+  display:flex;
+  flex-wrap:wrap;
+}
+footer .bascentre a{
+  justify-items: center;
+  font-size: small;
+  color: #70757a;
+  text-decoration: none;
+  cursor: pointer;
+}
+footer img{
+  width: 15px;
+  height: 15px;
+}
+footer .basdroite{
+  display:flex;
+  flex-wrap:wrap;
+}
+footer .basdroite a{
+  margin-right: 10px;
+  margin-top: 10px;
+  font-size: small;
+  color: #70757a;
+  text-decoration: none;
+  cursor : pointer
+}
